--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.2",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.8.0",
     "formik": "^2.4.5",
     "generate-react-cli": "^8.4.0",
     "helmet": "^7.1.0",
