--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^4.0.0",
     "primeicons": "^6.0.1",
     "primereact": "^10.2.1",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-detect-offline": "^2.4.5",
